# pleiades_sidebar

./: .gitignore  README.md  pyproject.toml
design/: template_207425.ai  template_213761155.ai  template_541138.ai
scripts/: generate.py  get_pleiades_matches_from_sidebar_data.py  unrecip2csv.py
src/pleiades_sidebar/: ancient_ports.py  cfl_ago.py  dataset.py  edh_geo.py  generator.py  itinere.py  manto.py  nomisma.py  norm.py  paths_atlas.py  pleiades.py  temples_classical_world.py  topostext.py  whg.py  wikidata.py
tests/: test_generator.py  test_wikidata.py
tests/data/: wikidata.csv
